--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -2,7 +2,7 @@
 slug: mdx-blog-post
 title: Symfony the best way
 authors: [muneer]
-tags: [docusaurus]
+tags: [Symfony]
 ---
 
 Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
